Fix content being cut off

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -314,7 +314,7 @@ input:checked {
   }
 
   ~ .tab-content {
-    max-height: 100vh;
+    max-height: 100%;
     padding: 1em;
   }
 }
